minor design changes

--- a/templates/home.html
+++ b/templates/home.html
@@ -11,7 +11,7 @@
 <div class="searchbox">
     <form action="/search" method="get" >
     <input type="text" name="search_box" placeholder="What are you looking for?">
-    <button type="submit">Search</button></a>
+    <button type="submit" class="button">Search</button></a>
     </form>
 </div>
 <table>
