--- a/templates/register.html
+++ b/templates/register.html
@@ -2,15 +2,32 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Register</title>
+    <title>Registration</title>
+    <link rel="stylesheet" type="text/css" href="/static/design.css"/>
+    <link rel="shortcut icon" href="/static/logo.ico" />
 </head>
 <body>
+<h1>Registration</h1>
+<br><br>
+<table>
 <form method="POST" action="/registration">
-    <input name="username" type="text" placeholder="User name"><br>
-    <input name="password" type="password" ><br>
-    <input name="email" type="email" placeholder="email"><br>
-    <button type="submit">Submit</button>
-
+    <tr>
+        <td> Username:</td>
+        <td><input name="username" type="text" placeholder="User name"></td>
+    </tr>
+    <tr>
+        <td> Password:</td>
+        <td><input name="password" type="password" ></td>
+    </tr>
+    <tr>
+        <td> Email:</td>
+        <td><input name="email" type="email" placeholder="Email"></td>
+    </tr>
+    <tr>
+        <td></td>
+        <td><button type="submit" class="button">Register</button></td>
+    </tr>
 </form>
+</table>
 </body>
 </html>
