--- a/templates/search.html
+++ b/templates/search.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
     <link rel="shortcut icon" href="/static/logo.ico" />
     <link rel="stylesheet" type="text/css" href="/static/design.css"/>
     <title>Search</title>
@@ -11,19 +10,18 @@
     <h1>Search Results:</h1>
     <table>
         {% for search in searching %}
-            <a href="questions/{{ search.id }}?search_box={{ search_box }}"</a>
-        <li>
-            {{ search.title }}
         <tr>
         <td>
-
             <a href="{{ url_for('raise_view_number', question_id=search.id) }}">{{ search.title }}"</a>
-
         </td>
         </tr>
     {% endfor %}
+        <tr>
+            <td align="center">
+                <a href="/list"><button type="button" class="button">Back to questions</button></a>
+            </td>
+        </tr>
 </table>
-<a href="/list">
-    <button type="button" class="button">Back to questions</button>
+
 </body>
 </html>
