--- a/templates/home.html
+++ b/templates/home.html
@@ -14,6 +14,16 @@
     <button type="submit" class="button">Search</button></a>
     </form>
 </div>
+{% if session.username %}
+ You are logged in as {{ session.username }}
+<a href="/logout">
+    <button type="button" class="button">Log out.</button>
+{% else %}
+<a href="/login">
+    <button type="button" class="button">Log in.</button>
+</a>
+{% endif %}
+</a>
 <table>
 <tr>
     <td>
