Add search and login button to header in question.html

--- a/templates/question.html
+++ b/templates/question.html
@@ -7,7 +7,16 @@
     <link rel="shortcut icon" href="/static/logo.ico" />
 </head>
 <body>
-<h1>Question:</h1>
+<h1><table><tr><td width=20% ><div align="center">
+    <form action="/search" method="get" >
+    <input type="text" name="search_box" placeholder="What are you looking for?"><br>
+    <button type="submit" class="button">Search</button></a>
+    </form>
+</div></td>
+<td width=60%>Question:</td>
+    <td width=20%><div><a href="login.html"><button class="button">Log in!</button></a></td></tr></div>
+</table>
+</h1>
 <table>
     <tr align="center">
         <th>ID</th>
