--- a/templates/home.html
+++ b/templates/home.html
@@ -7,13 +7,14 @@
     <link rel="shortcut icon" href="/static/logo.ico" />
 </head>
 <body>
-<h1>Ask mate 2.0</h1>
+<h1>Ask mate 2.0
 <div class="searchbox">
     <form action="/search" method="get" >
     <input type="text" name="search_box" placeholder="What are you looking for?">
     <button type="submit" class="button">Search</button></a>
     </form>
 </div>
+</h1>
 <table>
 <tr>
     <td>
