add new desing to login.html logged in part

--- a/templates/login.html
+++ b/templates/login.html
@@ -11,7 +11,7 @@
     {% if session['logged_in'] %}
 
 
-    You're logged in already,fool!
+    <h2>You're logged in already,fool!</h2>
 
     {% else %}
 
