add new comment, edit, delete button desing to question.html, resize home.html and list.html buttons

--- a/templates/home.html
+++ b/templates/home.html
@@ -44,13 +44,13 @@
 </table>
 <div class="align-center">
 <a href="/add-question">
-    <button type="button" class="button">Ask a question!</button>
+    <button type="button" class="button" style="width: 160px">Ask a question!</button>
 </a>
 <a href="/user-list">
-    <button type="button" class="button">Go to users!</button>
+    <button type="button" class="button" style="width: 160px">Go to users!</button>
 </a>
 <a href="/list">
-    <button type="button" class="button">All questions.</button>
+    <button type="button" class="button" style="width: 160px">All questions.</button>
 </a>
 </div>
 </body>
