--- a/templates/list.html
+++ b/templates/list.html
@@ -26,22 +26,22 @@
 </table></h1>
 <div class="align-center">
 <a href="/list?criteria=submission_time&direction=ASC">
-    <button type="button" class="button">Time ⇧</button>
+    <button type="button" class="button" style="width: 150px">Time ⇧</button>
 </a>
 <a href="/list?criteria=submission_time&direction=DESC">
-    <button type="button" class="button">Time ⇩</button>
+    <button type="button" class="button" style="width: 150px">Time ⇩</button>
 </a>
 <a href="/list?criteria=vote_number&direction=ASC">
-    <button type="button" class="button">Vote number ⇧</button>
+    <button type="button" class="button" style="width: 150px">Vote number ⇧</button>
 </a>
 <a href="/list?criteria=vote_number&direction=DESC">
-    <button type="button" class="button">Vote number ⇩</button>
+    <button type="button" class="button" style="width: 150px">Vote number ⇩</button>
 </a>
 <a href="/list?criteria=view_number&direction=ASC">
-    <button type="button" class="button">View number ⇧</button>
+    <button type="button" class="button" style="width: 150px">View number ⇧</button>
 </a>
 <a href="/list?criteria=view_number&direction=DESC">
-    <button type="button" class="button">View number ⇩</button>
+    <button type="button" class="button" style="width: 150px">View number ⇩</button>
 </a>
 </div>
 <table>
@@ -55,13 +55,13 @@
 </table>
 <div class="align-center">
 <a href="/add-question">
-    <button type="button" class="button">Ask a question!</button>
+    <button type="button" class="button" style="width: 160px">Ask a question!</button>
 </a>
 <a href="/user-list">
-    <button type="button" class="button">Go to users!</button>
+    <button type="button" class="button" style="width: 160px">Go to users!</button>
 </a>
 <a href="/">
-    <button type="button" class="button">Go to homepage!</button>
+    <button type="button" class="button" style="width: 160px">Go to homepage!</button>
 </a>
 </div>
 
