--- a/templates/question.html
+++ b/templates/question.html
@@ -44,7 +44,7 @@
             {% endfor %}
         <td>
         {% if session.user_id is defined %}
-        <a href="/question/{{ item.id }}/new-comment"><button type="button" class="button"> Add new comment!</button></a>
+        <a href="/question/{{ item.id }}/new-comment"><button type="button" class="button">💬</button></a>
         {% endif %}
         </td>
         {% if session.user_id is defined %}
@@ -66,7 +66,7 @@
             <td> {{ item.message }}</td>
             {% if session.user_id == item.user_id or session.user_id == 0%}
             <td><a href="/comment/{{ item.question_id }}/{{ item.id }}/edit"><button class="button">Edit comment!</button></a></td>
-            <td><a href="/comment/{{ question_id }}/{{ item.id }}/delete"><button class="button">Delete comment!</button></a> </td>
+            <td><a href="/comment/{{ question_id }}/{{ item.id }}/delete"><button class="button">🗑️</button></a> </td>
             {% endif %}
         </tr>
         {% endif %}
@@ -74,6 +74,13 @@
     {% endif %}
 </table>
 <h2>Answers:</h2>
+<div class="align-center">
+    {% if session.user_id is defined %}
+<a href="/questions/{{ question_id }}/new-answer">
+    <button type="button" class="button" style="width: 140px">Add answer!</button>
+</a>
+    {% endif %}
+</div>
 {% if answers_data|length == 0 %}
 <table>
     <tr>
@@ -82,14 +89,15 @@
 </table>
 {% else %}
 <table>
-    <th>
+    <tr>
         <th>ID</th>
         <th>Submission time</th>
         <th>Vote number</th>
         <th>Question ID</th>
         <th>Message</th>
         <th>Image</th>
-    </th>
+        <th>User ID</th>
+    </tr>
     {% for item in answers_data %}
         <tr>
 
@@ -98,11 +106,9 @@
                 {{ data }}
             </td>
         {% endfor %}
-        <td class="topborder">
-        </td>
         {% if session.user_id is defined %}
             <td class="topborder">
-                <a href="/answer/{{item.question_id }}/{{ item.id }}/new-comment"><button type="button" class="button"> Add new comment!</button></a>
+                <a href="/answer/{{item.question_id }}/{{ item.id }}/new-comment"><button type="button" class="button">💬</button></a>
             </td>
             <td class= "topborder">
                 <a href="/answer/{{ item.question_id }}/{{ item.id }}/like"><button type="button" class="button">👍</button></a>
@@ -113,10 +119,10 @@
         {% endif %}
         {% if session.user_id == item.user_id or session.user_id == 0 %}
             <td class="topborder">
-                <a href="/answer/{{ item.id }}/edit"><button type="button" class="button">Edit answer!</button></a>
+                <a href="/answer/{{ item.id }}/edit"><button type="button" class="button">✍️</button></a>
             </td>
             <td class="topborder">
-                <a href="/answer/{{ item.question_id }}/{{ item.id }}/delete"><button type="button" class="button">Delete answer!</button></a>
+                <a href="/answer/{{ item.question_id }}/{{ item.id }}/delete"><button type="button" class="button">🗑️</button></a>
             </td>
             {% endif %}
 
@@ -127,9 +133,9 @@
             <td>{{ comments.submission_time }}</td>
             <td>{{ comments.message }}</td>
             {% if session.user_id == comments.user_id or session.user_id == 0 %}
-            <td><a href="/comment/{{ question_id }}/{{ comments.id }}/edit"><button class="button">Edit comment!</button></a></td>
+            <td><a href="/comment/{{ question_id }}/{{ comments.id }}/edit"><button class="button">✍️</button></a></td>
 
-            <td><a href="/comment/{{ question_id }}/{{ comments.id }}/delete"><button class="button">Delete comment!</button></a></td>
+            <td><a href="/comment/{{ question_id }}/{{ comments.id }}/delete"><button class="button">🗑️</button></a></td>
             {% endif %}
         </tr>
 
@@ -139,17 +145,12 @@
 </table>
 {% endif %}
 <div class="align-center">
-    {% if session.user_id is defined %}
-<a href="/questions/{{ question_id }}/new-answer">
-    <button type="button" class="button">Add answer!</button>
-</a>
-    {% endif %}
 <a href="/list">
-    <button type="button" class="button">Back to questions.</button>
+    <button type="button" class="button" style="width: 160px">Back to questions.</button>
 </a>
 {% if session.user_id == question_data[0].user_id or session.user_id == 0 %}
 <a href="/questions/{{ question_id }}/delete">
-    <button type="button" class="button">Delete question.</button>
+    <button type="button" class="button" style="width: 160px">Delete question.</button>
 </a>
 {% endif %}
 </div>
