--- a/templates/question.html
+++ b/templates/question.html
@@ -65,7 +65,7 @@
             <td>{{ item.submission_time }}</td>
             <td> {{ item.message }}</td>
             {% if session.user_id == item.user_id or session.user_id == 0%}
-            <td><a href="/comment/{{ item.question_id }}/{{ item.id }}/edit"><button class="button">Edit comment!</button></a></td>
+            <td><a href="/comment/{{ item.question_id }}/{{ item.id }}/edit"><button class="button">✍️</button></a></td>
             <td><a href="/comment/{{ question_id }}/{{ item.id }}/delete"><button class="button">🗑️</button></a> </td>
             {% endif %}
         </tr>
