add new question layout to questions.html

--- a/static/design.css
+++ b/static/design.css
@@ -16,6 +16,12 @@ table{
     margin-right:auto;
 }
 
+table#question_table{
+	background: rgba(255,255,255,0.15);
+	box-shadow: 0px 0px 10px 10px rgba(255, 255, 255, 0.15);
+	margin: 2%;
+}
+
 table#input{
     font-family: 'Consolas', 'Deja Vu Sans Mono', 'Bitstream Vera Sans Mono', monospace;
     font-size: 15px;
