--- a/static/design.css
+++ b/static/design.css
@@ -20,6 +20,14 @@ table#question_table{
 	background: rgba(255,255,255,0.15);
 	box-shadow: 0px 0px 10px 10px rgba(255, 255, 255, 0.15);
 	margin: 2%;
+	width: 90%;
+}
+
+table#comment_table{
+	background: rgba(255,255,255,0.15);
+	box-shadow: 0px 0px 10px 10px rgba(255, 255, 255, 0.15);
+	margin: 2%;
+	width: 80%;
 }
 
 table#input{
