--- a/templates/question.html
+++ b/templates/question.html
@@ -103,39 +103,31 @@
 </table>
 {% else %}
 <table id="question_table">
-    <tr>
-        <th>ID</th>
-        <th>Submission time</th>
-        <th>Vote number</th>
-        <th>Question ID</th>
-        <th>Message</th>
-        <th>Image</th>
-        <th>User ID</th>
-    </tr>
     {% for item in answers_data %}
         <tr>
-
-        {% for data in item.values() %}
-            <td class="topborder" >
-                {{ data }}
-            </td>
-        {% endfor %}
+        <td align="left" width="80%">{{ item.submission_time }}</td>
+        </tr>
+        <tr>
+        <td align="left">{{ item.message }}</td>
+        <td align="right">👍</td>
+        <td align="left">{{ item.vote_number }}</td>
+        </tr>
         {% if session.user_id is defined %}
-            <td class="topborder">
+            <td>
                 <a href="/answer/{{item.question_id }}/{{ item.id }}/new-comment"><button type="button" class="button">💬</button></a>
             </td>
-            <td class= "topborder">
+            <td>
                 <a href="/answer/{{ item.question_id }}/{{ item.id }}/like"><button type="button" class="button">👍</button></a>
             </td>
-            <td class="topborder">
+            <td>
                 <a href="/answer/{{ item.question_id }}/{{ item.id }}/dislike"><button type="button" class="button">👎</button></a>
             </td>
         {% endif %}
         {% if session.user_id == item.user_id or session.user_id == 0 %}
-            <td class="topborder">
+            <td>
                 <a href="/answer/{{ item.id }}/edit"><button type="button" class="button">✍️</button></a>
             </td>
-            <td class="topborder">
+            <td>
                 <a href="/answer/{{ item.question_id }}/{{ item.id }}/delete"><button type="button" class="button">🗑️</button></a>
             </td>
             {% endif %}
