Edit answers/comments layout

--- a/templates/question.html
+++ b/templates/question.html
@@ -114,15 +114,15 @@
     </tr>
 </table>
 {% else %}
-<table id="question_table">
     {% for item in answers_data %}
+        <table id="question_table">
         <tr>
         <td align="left" width="80%">{{ item.submission_time }}</td>
-        </tr>
-        <tr>
-        <td align="left">{{ item.message }}</td>
         <td align="right">👍</td>
         <td align="left">{{ item.vote_number }}</td>
+        </tr>
+        <tr>
+        <td align="left" colspan="3">{{ item.message }}</td>
         </tr>
         {% if session.user_id is defined %}
             <td>
@@ -145,22 +145,35 @@
             {% endif %}
 
     </tr>
-    {% for comments in comment_data %}
-        {% if item.id == comments.answer_id %}
-        <tr>
-            <td>{{ comments.submission_time }}</td>
-            <td>{{ comments.message }}</td>
-            {% if session.user_id == comments.user_id or session.user_id == 0 %}
-            <td><a href="/comment/{{ question_id }}/{{ comments.id }}/edit"><button class="button">✍️</button></a></td>
-
-            <td><a href="/comment/{{ question_id }}/{{ comments.id }}/delete"><button class="button">🗑️</button></a></td>
-            {% endif %}
-        </tr>
-
-        {% endif %}
-    {% endfor %}
-    {% endfor %}
+    {% if comment_data != None %}
+{% for comments in comment_data %}
+{% if comments.answer_id != None %}
+    <table id="comment_table">
+            <tr>
+                <td width="90%">{{ comments.submission_time }}</td>
+                <td>
+                    {% if session.user_id == comments.user_id or session.user_id == 0%}
+                    <a href="/comment/{{ item.question_id }}/{{ comments.id }}/edit"><button class="button">✍️</button></a>
+                    {% endif %}
+                </td>
+                <td>
+                    {% if session.user_id == comments.user_id or session.user_id == 0%}
+                    <a href="/comment/{{ question_id }}/{{ comments.id }}/delete"><button class="button">🗑️</button></a>
+                    {% endif %}
+                </td>
+            </tr>
+            <tr>
+                <td colspan="3">{{ comments.message }}</td>
+            </tr>
+            <tr>
+                <td colspan="3" align="left">{{ comments.user_id }}</td>
+            </tr>
+    </table>
+{% endif %}
+{% endfor %}
+{% endif %}
 </table>
+{% endfor %}
 {% endif %}
 <br><br>
 <div class="align-center">
