--- a/static/design.css
+++ b/static/design.css
@@ -25,6 +25,8 @@ table#question_table{
 	box-shadow: 0px 0px 10px 10px rgba(255, 255, 255, 0.15);
 	margin: 2%;
 	width: 90%;
+	margin-left:auto;
+    margin-right:auto;
 }
 
 table#comment_table{
@@ -32,6 +34,8 @@ table#comment_table{
 	box-shadow: 0px 0px 10px 10px rgba(255, 255, 255, 0.15);
 	margin: 2%;
 	width: 80%;
+	margin-left:auto;
+    margin-right:auto;
 }
 
 table#input{
