fix mistypo in titles

--- a/templates/add-answer.html
+++ b/templates/add-answer.html
@@ -36,7 +36,7 @@
     </tr>
     <tr id="input">
         <td><button type="submit" class="button">Send!</button><br>
-        <a href="/questions/{{question_id}}"> <button type="button" class="button">Back to questions.</button></a></td>
+        <a href="/questions/{{question_id}}"> <button type="button" class="button">Back to question.</button></a></td>
     </tr>
     </form>
     </table>
