--- a/templates/delete-answer.html
+++ b/templates/delete-answer.html
@@ -12,7 +12,7 @@
     <button type="submit" class="button">Search</button></a>
     </form>
 </div></td>
-<td width=60% style="font-size: 35px">Do you really want to delete this question?</td>
+<td width=60% style="font-size: 35px">Do you really want to delete this answer?</td>
 <td width=20% style="font-size: 13px">{% if session.username %}
  You are logged in as <i>{{ session.username }}</i>
 <a href="/logout">
