--- a/templates/add-comment.html
+++ b/templates/add-comment.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Add new answer</title>
+    <title>Add new comment</title>
     <link rel="stylesheet" type="text/css" href="/static/design.css">
     <link rel="shortcut icon" href="/static/logo.ico" />
 </head>
