--- a/templates/delete-comment.html
+++ b/templates/delete-comment.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Delete Answer</title>
+    <title>Delete Comment</title>
     <link rel="stylesheet" type="text/css" href="/static/design.css">
     <link rel="shortcut icon" href="/static/logo.ico" />
 </head>
