--- a/templates/edit-comment.html
+++ b/templates/edit-comment.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Editing answer</title>
+    <title>Editing comment</title>
     <link rel="stylesheet" type="text/css" href="/static/design.css"/>
     <link rel="shortcut icon" href="/static/logo.ico" />
 </head>
